WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223859
[Cocoa] Exception thrown from -setShouldProvideMediaDataForTrackID:
https://bugs.webkit.org/show_bug.cgi?id=223859
Summary
[Cocoa] Exception thrown from -setShouldProvideMediaDataForTrackID:
Jer Noble
Reported
2021-03-28 17:26:06 PDT
[Cocoa] Exception thrown from -setShouldProvideMediaDataForTrackID:
Attachments
Patch
(1.73 KB, patch)
2021-03-28 17:27 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-03-28 17:26:33 PDT
<
rdar://75936746
>
Jer Noble
Comment 2
2021-03-28 17:27:34 PDT
Created
attachment 424516
[details]
Patch
EWS
Comment 3
2021-03-28 18:20:07 PDT
Committed
r275153
: <
https://commits.webkit.org/r275153
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424516
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug