[Cocoa] Exception thrown from -setShouldProvideMediaDataForTrackID: https://bugs.webkit.org/show_bug.cgi?id=223859 <rdar://75936746>

Reviewed by Eric Carlson.

Protect against undocumented exceptions thrown from -setShouldProvideMediaDataForTrackID:.

* platform/graphics/avfoundation/objc/SourceBufferParserAVFObjC.mm:
(WebCore::SourceBufferParserAVFObjC::setShouldProvideMediaDataForTrackID):


Canonical link: https://commits.webkit.org/235856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275153 268f45cc-cd09-0410-ab3c-d52691b4dbfc